# calt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  docker-compose.test.yml  pyproject.toml  readme.md
.codex/: DOCKER_TESTING.md  PLAN_PROGRESS.md  PROJECT_PLAN.md  STARTUP_CHECKLIST.md
.codex/skills/gh-workflow/: SKILL.md
.github/workflows/: docker-test.yml  precommit.yml
examples/: c2_two_phase_apply_plan.json  c3_needs_replan_plan.json  preview_only_write_plan.json  sample_plan.json  search_inspect_plan.json  workspace_overview_plan.json
scripts/: bootstrap_codex_ops.sh  check_docker_compose.sh  docker_test.sh
scripts/precommit/: plan_guard.sh
src/calt/: __init__.py
src/calt/cli/: __init__.py  app.py  display.py
src/calt/client/: __init__.py  http.py
src/calt/core/: __init__.py  models.py  state_machine.py
src/calt/daemon/: api.py  docker_env.py  entrypoint.py
src/calt/discord_bot/: __init__.py  bot.py  service.py
src/calt/runtime/: __init__.py  executor.py
src/calt/storage/: __init__.py  sqlite.py
tests/: test_calt.py  test_plan_guard.sh
tests/e2e/: test_end_to_end_flows.py
tests/integration/: test_cli_discord_bridge.py  test_daemon_api.py  test_preview_gate.py  test_sqlite_storage.py  test_step_input_references.py
tests/unit/: test_bootstrap_codex_ops.py  test_cli.py  test_client_http.py  test_core_state_machine.py  test_daemon_docker_env.py  test_daemon_entrypoint.py  test_discord_service.py  test_runtime_executor.py  test_sample_plan_json.py  test_tools_readonly.py  test_tools_two_phase.py
(+6 files in other folders)
