[project]
name = "calt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sigumaa", email = "66453922+Sigumaa@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
